Downgraded to Java 8 from 17.